--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +9,7 @@
     <title>You weight</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Tu peso en otro planeta</h1>
 </body>
 <script src="./code.js"></script>
 </html>
